--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'com.jakewharton.butterknife'
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
@@ -27,4 +27,7 @@ dependencies {
     compile 'jp.wasabeef:glide-transformations:3.0.1'
     compile 'com.orhanobut:logger:2.1.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.3.0'
+
+    compile 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
