--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,6 @@ dependencies {
 
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+//    compile 'com.github.skydoves:colorpickerview:1.0.7'
+    compile 'com.jaredrummler:colorpicker:1.0.1'
 }
