--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-//    compile project(':library')
+    compile project(':library')
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.github.bumptech.glide:glide:4.3.0'
     compile 'jp.wasabeef:glide-transformations:3.0.1'
@@ -32,5 +32,5 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 //    compile 'com.github.skydoves:colorpickerview:1.0.7'
     compile 'com.jaredrummler:colorpicker:1.0.1'
-    compile 'com.github.ytjojo:ShadowLayout:1.0.1'
+//    compile 'com.github.ytjojo:ShadowLayout:1.0.1'
 }
